2005-03-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower
	* lily
	* kpath-guile: Nitpick run: buildscripts/fixcc.py.

2005-03-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/accidental.cc: special bboxes for natural. 

	* mf/feta-toevallig.mf: make stems heavier.

	* lily/dynamic-text-spanner.cc (print): add bound padding for edge
	texts as well.

	* mf/feta-klef.mf: revise. 

	* mf/feta-schrift.mf: make thinning of accent less pronounced.

	* mf/feta-klef.mf: add rounded curve at top. 
	make thinnib a little heavier.

2005-03-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/fixcc.py: New file.

	* input/regression/utf8.ly: Update Debian font description.

2005-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix test.

2005-03-09  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/invoking.itely: added Sebastino Vigna's
	docs for the --jail option.

2005-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stem.cc (print): only produce stemlets if there are no
	noteheads on this stem.

	* lily/note-spacing.cc (stem_dir_correction): robustness fix:
	don't crash on stemlet (visible stem without heads).

	* scm/define-grobs.scm (all-grob-descriptions): junk LeftEdge for
	unbroken situations. 

	* scm/output-lib.scm (center-invisible): new function.

	* lily/spacing-loose-columns.cc (set_loose_columns): use spacing
	wishes to determine loose column space.

	* lily/font-config.cc (init_fontconfig): add
	fonts/{otf,type1,cff}  to path.

	* lily/main.cc (setup_paths): add fonts/{otf,svg,tfm,cff} to path

	* mf/GNUmakefile (Module): install all fonts under otf/

	* scm/framework-ps.scm (Module): read fonts from fonts/extension,
	replace /fonts/otf/ by /ps/ 

	
2005-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-book.cc (classic_output): Reinstate header_0_ hack.

	* lily/book.cc (process): Oops, add score_.header_.

	* lily/paper-book.cc: Fold hearders, score and texts into scores_.
